text align fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -93,4 +93,5 @@ body {
   display: flex;
   justify-content: center;
   font-size: 24px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
